--- a/css/khj.css
+++ b/css/khj.css
@@ -480,7 +480,7 @@ position: absolute;
   /* Line03 */
   position: absolute;
   width: 100%;
-  height: 640%;
+  height: 1143%;
   left: 19%;
   top: -100%;
 
@@ -556,8 +556,8 @@ top: 3.7px;
 position: absolute;
 width: 200px;
 height: 20px;
-left: 20%;
-top: 39%;
+left: 28%;
+top: 27%;
 /*background-color: #10F901;*/
     text-align: left;
     text-decoration: underline;
@@ -581,8 +581,8 @@ color: #000000;
 position: absolute;
 width: 270px;
 height: 20px;
-left: 20%;
-top: 41%;
+left: 28%;
+top: 29%;
 /*background-color: #10F901;*/
 
 font-family: 'Noto Sans KR';
@@ -600,8 +600,8 @@ color: #000000;
 .img_01 {
     display: block;
     position: absolute;
-    left: 19%;
-    top: 45%;
+    left: 28%;
+    top: 35%;
     width: 400px;
     height: 500px;
 
@@ -610,9 +610,9 @@ color: #000000;
 .img_02 {
     display: block;
     position: absolute;
-    top: 45%;
+    top: 35%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 19.2%;
     width: 400px;
     height: 500px;
 }
@@ -623,7 +623,7 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 125%;
+    top: 113%;
     width: 400px;
     height: 500px;
 }
@@ -631,9 +631,9 @@ color: #000000;
 .img_04 {
     display: block;
     position: absolute;
-    top: 125%;
+    top: 113%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 19.2%;
     width: 400px;
     height: 500px;
 }
@@ -642,7 +642,7 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 205%;
+    top: 200%;
     width: 400px;
     height: 500px;
 }
@@ -650,18 +650,18 @@ color: #000000;
 .img_06 {
     display: block;
     position: absolute;
-    top: 205%;
+    top: 200%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 19.2%;
     width: 400px;
     height: 500px;
 }
 
 .img_07 {
-        display: block;
+    display: block;
     position: absolute;
-    left: 19%;
-    top: 285%;
+    left: 35%;
+    top: 295%;
     width: 400px;
     height: 500px;
 }
@@ -669,18 +669,18 @@ color: #000000;
 .img_08 {
     display: block;
     position: absolute;
-    top: 285%;
-    transform: translateX(-25%);
-    right: 19%;
+    top: 380%;
+    left: 19%;
     width: 400px;
     height: 500px;
 }
 
+
 .img_09 {
     display: block;
     position: absolute;
-    left: 19%;
-    top: 365%;
+    right: 25%;
+    top: 380%;
     width: 400px;
     height: 500px;
 }
@@ -688,38 +688,150 @@ color: #000000;
 .img_10 {
     display: block;
     position: absolute;
-    top: 365%;
-    transform: translateX(-25%);
-    right: 19%;
+    top: 465%;
+    left: 19.05%;
     width: 400px;
     height: 500px;
+    z-index: 999;
 }
 
 .img_11 {
     display: block;
     position: absolute;
-    left: 19%;
-    top: 445%;
+    top: 545%;
+    left: 19.05%;
     width: 400px;
     height: 500px;
 }
 
 .img_12 {
-    display: block;
-    position: absolute;
-    top: 445%;
-    transform: translateX(-25%);
-    right: 19%;
-    width: 400px;
-    height: 500px;
+  display: block;
+  position: absolute;
+  transform: translateX(-25%);
+  right: 15%;
+  top: 548%;
+  width: 400px;
+  height: 500px;
+
+}
+
+.img_13 {
+  display: block;
+  position: absolute;
+  top: 642%;
+  left: 19.05%;
+  width: 400px;
+  height: 500px;
+}
+
+.img_14 {
+  display: block;
+  position: absolute;
+  transform: translateX(-25%);
+  right: 19.2%;
+  top: 642%;
+  width: 400px;
+  height: 500px;
+  z-index: 999;
+}
+
+.img_15 {
+  display: block;
+  position: absolute;
+  top: 730%;
+  left: 19.05%;
+  width: 400px;
+  height: 500px;
+}
+
+.img_16 {
+  display: block;
+  position: absolute;
+  transform: translateX(-25%);
+  right: 27%;
+  top: 730%;
+  width: 400px;
+  height: 500px;
+}
+
+.img_17 {
+  display: block;
+  position: absolute;
+  transform: translateX(-25%);
+  right: 3%;
+  top: 730%;
+  width: 400px;
+  height: 500px;
+}
+
+.img_18 {
+
+  display: block;
+  position: absolute;
+  top: 800%;
+  left: 19.05%;
+  width: 400px;
+  height: 500px;
+
+}
+
+.img_19 {
+  display: block;
+  position: absolute;
+  transform: translateX(-25%);
+  right: 19.2%;
+  top: 800%;
+  width: 400px;
+  height: 500px;
+}
+
+.img_20 {
+
+  display: block;
+  position: absolute;
+  top: 890%;
+  left: 19.05%;
+  width: 400px;
+  height: 500px;
+
+}
+
+.img_21 {
+  display: block;
+  position: absolute;
+  transform: translateX(-25%);
+  right: 19.2%;
+  top: 890%;
+  width: 400px;
+  height: 500px;
+}
+
+.img_22 {
+
+  display: block;
+  position: absolute;
+  top: 953%;
+  left: 32.5%;
+  width: 400px;
+  height: 500px;
+
+}
+
+.img_23 {
+  display: block;
+  position: absolute;
+  left: 32.5%;
+  top: 988.5%;
+  width: 400px;
+  height: 500px;
 }
 
 .nextproj {
     position: absolute;
     width: 120px;
     height: 20px;
-    right: 19%;
-    top: 511%;
+    right: 31.5%;
+    top: 1025%;
     text-align: left;
     font-family: 'helvetica';
     font-style: normal;
@@ -757,7 +869,7 @@ cursor: pointer;
   position: absolute;
   width: 300%;
   height: 0px;
-  top: 540%;
+  top: 1043%;
   left: 19%;
   border-style: solid;
   border-color: #FA00FF;
@@ -768,7 +880,7 @@ cursor: pointer;
     position: absolute;
     width: 150px;
     height: 30px;
-    top: 543vh;
+    top: 1046vh;
     left: 19%;
     font-family: 'Helvetica Neue';
     font-style: normal;
@@ -785,7 +897,7 @@ cursor: pointer;
     position: absolute;
     width: 237px;
     height: 30px;
-    top: 563vh;
+    top: 1066vh;
     right: 19%;
     font-family: 'Helvetica Neue';
     font-style: normal;
@@ -801,7 +913,7 @@ cursor: pointer;
     position: absolute;
     width: 250px;
     height: 22px;
-    top: 545vh;
+    top: 1048vh;
     right: 19%;
     display: flex;
     font-family: 'Helvetica Neue';
@@ -819,7 +931,7 @@ cursor: pointer;
     position: absolute;
     width: 185px;
     height: 22px;
-    top: 547.8vh;
+    top: 1050.8vh;
     right: 19%;
     display: flex;
     font-family: 'Helvetica Neue';
@@ -836,7 +948,7 @@ cursor: pointer;
   position: absolute;
   width: 186px;
   height: 31px;
-  top: 551vh;
+  top: 1054vh;
   right: 19%;
 
   font-family: 'Helvetica Neue';
@@ -858,7 +970,7 @@ justify-content: flex-end;
     width: 5px;
     height: 5px;
     left: 0%;
-    top: 585vh;
+    top: 1083vh;
 }
 
 
@@ -909,7 +1021,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 19%;
-  top: 548.5vh;
+  top: 1051.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -929,7 +1041,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 24%;
-  top: 548.5vh;
+  top: 1051.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -948,7 +1060,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 29.3%;
-  top: 548.5vh;
+  top: 1051.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -969,7 +1081,7 @@ transform: translateX(15px);
     width: 2px;
     height: 2px;
     left: 22.6%;
-    top: 549.7vh;
+    top: 1052.7vh;
     background-color: #000000;
 }
 
@@ -979,7 +1091,7 @@ transform: translateX(15px);
     width: 2px;
     height: 2px;
     left: 27.8%;
-    top: 549.7vh;
+    top: 1052.7vh;
     background-color: #000000;
 }
 
@@ -1007,53 +1119,12 @@ transform: translateX(15px);
     z-index: 999;
 }
 
-.cursor_more03 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
+.img_02:hover{
+    cursor: none;
 }
 
-.cursor_more04 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
-}
-
-.cursor_more05 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
-}
-
-
-.cursor_more06 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
+.img_02:hover+.cursor_more01{
+    opacity: 1;
 }
 
 
@@ -1093,33 +1164,6 @@ color: #000000;
 
 }
 
-.seemore_kss {
-    position: absolute;
-    transform: translate(20px, 39px);
-    font-family: 'Noto Sans KR';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 13px;
-    line-height: 20px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-/* identical to box height, or 133% */
-
-color: #000000;
-
-}
-
-
-.img_02:hover+.cursor_more01{
-    opacity: 1;
-}
-
-.img_02:hover{
-    cursor: none;
-}
-
 .img_04:hover+.cursor_more02{
     opacity: 1;
 }
@@ -1127,37 +1171,7 @@ color: #000000;
 .img_04:hover{
     cursor: none;
 }
-
-.img_06:hover+.cursor_more03{
-    opacity: 1;
-}
-
-.img_06:hover{
-    cursor: none;
-}
-
-.img_08:hover+.cursor_more04{
-    opacity: 1;
-}
-
-.img_08:hover{
-    cursor: none;
-}
-
-.img_10:hover+.cursor_more05{
-    opacity: 1;
-}
-
-.img_10:hover{
-    cursor: none;
-}
-
-.img_12:hover+.cursor_more06{
-    opacity: 1;
-}
-
-.img_12:hover{
-    cursor: none;
+.yhj {
 }
 
 .arrow {
@@ -1190,8 +1204,8 @@ color: #000000;
     position: absolute;
     width: 150px;
     height: 20px;
-    left: 20%;
-    top: 511%;
+    left: 32.5%;
+    top: 1025%;
     text-align: right;
     font-family: 'helvetica';
     font-style: normal;
