--- a/css/psh.css
+++ b/css/psh.css
@@ -480,7 +480,7 @@ position: absolute;
   /* Line03 */
   position: absolute;
   width: 100%;
-  height: 640%;
+  height: 725%;
   left: 19%;
   top: -100%;
 
@@ -557,7 +557,7 @@ position: absolute;
 width: 200px;
 height: 20px;
 left: 20%;
-top: 39%;
+top: 27%;
 /*background-color: #10F901;*/
     text-align: left;
     text-decoration: underline;
@@ -582,7 +582,7 @@ position: absolute;
 width: 270px;
 height: 20px;
 left: 20%;
-top: 41%;
+top: 29%;
 /*background-color: #10F901;*/
 
 font-family: 'Noto Sans KR';
@@ -601,7 +601,7 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 45%;
+    top: 33%;
     width: 400px;
     height: 500px;
 
@@ -610,9 +610,9 @@ color: #000000;
 .img_02 {
     display: block;
     position: absolute;
-    top: 45%;
+    top: 33%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 19.2%;
     width: 400px;
     height: 500px;
 }
@@ -623,7 +623,7 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 125%;
+    top: 123%;
     width: 400px;
     height: 500px;
 }
@@ -631,9 +631,9 @@ color: #000000;
 .img_04 {
     display: block;
     position: absolute;
-    top: 125%;
+    top: 123%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 19.2%;
     width: 400px;
     height: 500px;
 }
@@ -642,7 +642,7 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 205%;
+    top: 223%;
     width: 400px;
     height: 500px;
 }
@@ -650,9 +650,9 @@ color: #000000;
 .img_06 {
     display: block;
     position: absolute;
-    top: 205%;
+    top: 223%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 19.2%;
     width: 400px;
     height: 500px;
 }
@@ -661,7 +661,7 @@ color: #000000;
         display: block;
     position: absolute;
     left: 19%;
-    top: 285%;
+    top: 323%;
     width: 400px;
     height: 500px;
 }
@@ -669,18 +669,19 @@ color: #000000;
 .img_08 {
     display: block;
     position: absolute;
-    top: 285%;
+    top: 323%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 19.2%;
     width: 400px;
     height: 500px;
 }
+
 
 .img_09 {
     display: block;
     position: absolute;
     left: 19%;
-    top: 365%;
+    top: 423%;
     width: 400px;
     height: 500px;
 }
@@ -688,9 +689,9 @@ color: #000000;
 .img_10 {
     display: block;
     position: absolute;
-    top: 365%;
+    top: 423%;
     transform: translateX(-25%);
-    right: 19%;
+    right: 11.7%;
     width: 400px;
     height: 500px;
 }
@@ -698,16 +699,18 @@ color: #000000;
 .img_11 {
     display: block;
     position: absolute;
-    left: 19%;
-    top: 445%;
+    left: 19.05%;
+    top: 513%;
     width: 400px;
     height: 500px;
 }
 
+
+
 .img_12 {
     display: block;
     position: absolute;
-    top: 445%;
+    top: 535%;
     transform: translateX(-25%);
     right: 19%;
     width: 400px;
@@ -718,8 +721,8 @@ color: #000000;
     position: absolute;
     width: 120px;
     height: 20px;
-    right: 19%;
-    top: 511%;
+    right: 28.7%;
+    top: 602%;
     text-align: left;
     font-family: 'helvetica';
     font-style: normal;
@@ -757,7 +760,7 @@ cursor: pointer;
   position: absolute;
   width: 300%;
   height: 0px;
-  top: 540%;
+  top: 625%;
   left: 19%;
   border-style: solid;
   border-color: #FA00FF;
@@ -768,7 +771,7 @@ cursor: pointer;
     position: absolute;
     width: 150px;
     height: 30px;
-    top: 543vh;
+    top: 628vh;
     left: 19%;
     font-family: 'Helvetica Neue';
     font-style: normal;
@@ -785,7 +788,7 @@ cursor: pointer;
     position: absolute;
     width: 237px;
     height: 30px;
-    top: 563vh;
+    top: 648vh;
     right: 19%;
     font-family: 'Helvetica Neue';
     font-style: normal;
@@ -801,7 +804,7 @@ cursor: pointer;
     position: absolute;
     width: 250px;
     height: 22px;
-    top: 545vh;
+    top: 630vh;
     right: 19%;
     display: flex;
     font-family: 'Helvetica Neue';
@@ -819,7 +822,7 @@ cursor: pointer;
     position: absolute;
     width: 185px;
     height: 22px;
-    top: 547.8vh;
+    top: 632.8vh;
     right: 19%;
     display: flex;
     font-family: 'Helvetica Neue';
@@ -836,7 +839,7 @@ cursor: pointer;
   position: absolute;
   width: 186px;
   height: 31px;
-  top: 551vh;
+  top: 636vh;
   right: 19%;
 
   font-family: 'Helvetica Neue';
@@ -858,7 +861,7 @@ justify-content: flex-end;
     width: 5px;
     height: 5px;
     left: 0%;
-    top: 585vh;
+    top: 667vh;
 }
 
 
@@ -909,7 +912,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 19%;
-  top: 548.5vh;
+  top: 633.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -929,7 +932,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 24%;
-  top: 548.5vh;
+  top: 633.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -948,7 +951,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 29.3%;
-  top: 548.5vh;
+  top: 633.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -969,7 +972,7 @@ transform: translateX(15px);
     width: 2px;
     height: 2px;
     left: 22.6%;
-    top: 549.7vh;
+    top: 634.7vh;
     background-color: #000000;
 }
 
@@ -979,7 +982,7 @@ transform: translateX(15px);
     width: 2px;
     height: 2px;
     left: 27.8%;
-    top: 549.7vh;
+    top: 634.7vh;
     background-color: #000000;
 }
 
@@ -1007,53 +1010,12 @@ transform: translateX(15px);
     z-index: 999;
 }
 
-.cursor_more03 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
+.img_02:hover{
+    cursor: none;
 }
 
-.cursor_more04 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
-}
-
-.cursor_more05 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
-}
-
-
-.cursor_more06 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
+.img_02:hover+.cursor_more01{
+    opacity: 1;
 }
 
 
@@ -1093,33 +1055,6 @@ color: #000000;
 
 }
 
-.seemore_kss {
-    position: absolute;
-    transform: translate(20px, 39px);
-    font-family: 'Noto Sans KR';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 13px;
-    line-height: 20px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-/* identical to box height, or 133% */
-
-color: #000000;
-
-}
-
-
-.img_02:hover+.cursor_more01{
-    opacity: 1;
-}
-
-.img_02:hover{
-    cursor: none;
-}
-
 .img_04:hover+.cursor_more02{
     opacity: 1;
 }
@@ -1127,37 +1062,7 @@ color: #000000;
 .img_04:hover{
     cursor: none;
 }
-
-.img_06:hover+.cursor_more03{
-    opacity: 1;
-}
-
-.img_06:hover{
-    cursor: none;
-}
-
-.img_08:hover+.cursor_more04{
-    opacity: 1;
-}
-
-.img_08:hover{
-    cursor: none;
-}
-
-.img_10:hover+.cursor_more05{
-    opacity: 1;
-}
-
-.img_10:hover{
-    cursor: none;
-}
-
-.img_12:hover+.cursor_more06{
-    opacity: 1;
-}
-
-.img_12:hover{
-    cursor: none;
+.yhj {
 }
 
 .arrow {
@@ -1190,8 +1095,8 @@ color: #000000;
     position: absolute;
     width: 150px;
     height: 20px;
-    left: 20%;
-    top: 511%;
+    left: 30.2%;
+    top: 602%;
     text-align: right;
     font-family: 'helvetica';
     font-style: normal;
