--- a/css/yhj.css
+++ b/css/yhj.css
@@ -59,7 +59,6 @@
 
         body {
         margin: 0;
-
         }
 
         /**
@@ -401,6 +400,9 @@
         /*! normalize.css v8.0.1  */
 
 
+body{
+  max-height: 10%;
+}
 
 .PINKGUIDE_KR{
 position: absolute;
@@ -480,7 +482,7 @@ position: absolute;
   /* Line03 */
   position: absolute;
   width: 100%;
-  height: 640%;
+  height: 200%;
   left: 19%;
   top: -100%;
 
@@ -550,14 +552,14 @@ top: 3.7px;
     top: 100px;
 }
 
-.dust_text01 {
+.yhj_text01 {
     /* 먼지, 2019 */
 
 position: absolute;
 width: 200px;
 height: 20px;
 left: 20%;
-top: 39%;
+top: 23%;
 /*background-color: #10F901;*/
     text-align: left;
     text-decoration: underline;
@@ -575,14 +577,14 @@ color: #000000;
 
 }
 
-.dust_text02 {
+.yhj_text02 {
     /* 먼지, 2019 */
 
 position: absolute;
 width: 270px;
 height: 20px;
 left: 20%;
-top: 41%;
+top: 25%;
 /*background-color: #10F901;*/
 
 font-family: 'Noto Sans KR';
@@ -601,20 +603,18 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 45%;
-    width: 400px;
-    height: 500px;
+    top: 29%;
+    width: 200px;
 
 }
 
 .img_02 {
     display: block;
     position: absolute;
-    top: 45%;
+    top: 29%;
     transform: translateX(-25%);
-    right: 19%;
-    width: 400px;
-    height: 500px;
+    left: 44.75%;
+    width: 250px;
 }
 
 
@@ -622,8 +622,8 @@ color: #000000;
 .img_03 {
     display: block;
     position: absolute;
-    left: 19%;
-    top: 125%;
+    right: 13%;
+    top: 29%;
     width: 400px;
     height: 500px;
 }
@@ -631,7 +631,7 @@ color: #000000;
 .img_04 {
     display: block;
     position: absolute;
-    top: 125%;
+    top: 145%;
     transform: translateX(-25%);
     right: 19%;
     width: 400px;
@@ -642,7 +642,7 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 205%;
+    top: 245%;
     width: 400px;
     height: 500px;
 }
@@ -650,7 +650,7 @@ color: #000000;
 .img_06 {
     display: block;
     position: absolute;
-    top: 205%;
+    top: 245%;
     transform: translateX(-25%);
     right: 19%;
     width: 400px;
@@ -661,17 +661,7 @@ color: #000000;
         display: block;
     position: absolute;
     left: 19%;
-    top: 285%;
-    width: 400px;
-    height: 500px;
-}
-
-.img_08 {
-    display: block;
-    position: absolute;
-    top: 285%;
-    transform: translateX(-25%);
-    right: 19%;
+    top: 345%;
     width: 400px;
     height: 500px;
 }
@@ -680,17 +670,7 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
-    top: 365%;
-    width: 400px;
-    height: 500px;
-}
-
-.img_10 {
-    display: block;
-    position: absolute;
-    top: 365%;
-    transform: translateX(-25%);
-    right: 19%;
+    top: 445%;
     width: 400px;
     height: 500px;
 }
@@ -699,7 +679,27 @@ color: #000000;
     display: block;
     position: absolute;
     left: 19%;
+    top: 545%;
+    width: 400px;
+    height: 500px;
+}
+
+.img_08 {
+    display: block;
+    position: absolute;
+    top: 345%;
+    transform: translateX(-25%);
+    right: 19%;
+    width: 400px;
+    height: 500px;
+}
+
+.img_10 {
+    display: block;
+    position: absolute;
     top: 445%;
+    transform: translateX(-25%);
+    right: 19%;
     width: 400px;
     height: 500px;
 }
@@ -707,7 +707,7 @@ color: #000000;
 .img_12 {
     display: block;
     position: absolute;
-    top: 445%;
+    top: 545%;
     transform: translateX(-25%);
     right: 19%;
     width: 400px;
@@ -718,8 +718,8 @@ color: #000000;
     position: absolute;
     width: 120px;
     height: 20px;
-    right: 19%;
-    top: 511%;
+    right: 15.1%;
+    top: 77%;
     text-align: left;
     font-family: 'helvetica';
     font-style: normal;
@@ -757,7 +757,7 @@ cursor: pointer;
   position: absolute;
   width: 300%;
   height: 0px;
-  top: 540%;
+  top: 100%;
   left: 19%;
   border-style: solid;
   border-color: #FA00FF;
@@ -768,7 +768,7 @@ cursor: pointer;
     position: absolute;
     width: 150px;
     height: 30px;
-    top: 543vh;
+    top: 103vh;
     left: 19%;
     font-family: 'Helvetica Neue';
     font-style: normal;
@@ -785,7 +785,7 @@ cursor: pointer;
     position: absolute;
     width: 237px;
     height: 30px;
-    top: 563vh;
+    top: 123vh;
     right: 19%;
     font-family: 'Helvetica Neue';
     font-style: normal;
@@ -801,7 +801,7 @@ cursor: pointer;
     position: absolute;
     width: 250px;
     height: 22px;
-    top: 545vh;
+    top: 105vh;
     right: 19%;
     display: flex;
     font-family: 'Helvetica Neue';
@@ -819,7 +819,7 @@ cursor: pointer;
     position: absolute;
     width: 185px;
     height: 22px;
-    top: 547.8vh;
+    top: 107.8vh;
     right: 19%;
     display: flex;
     font-family: 'Helvetica Neue';
@@ -836,7 +836,7 @@ cursor: pointer;
   position: absolute;
   width: 186px;
   height: 31px;
-  top: 551vh;
+  top: 111vh;
   right: 19%;
 
   font-family: 'Helvetica Neue';
@@ -858,7 +858,7 @@ justify-content: flex-end;
     width: 5px;
     height: 5px;
     left: 0%;
-    top: 585vh;
+    top: 135vh;
 }
 
 
@@ -909,7 +909,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 19%;
-  top: 548.5vh;
+  top: 108.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -929,7 +929,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 24%;
-  top: 548.5vh;
+  top: 108.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -948,7 +948,7 @@ transform: translateX(15px);
   width: 40px;
   height: 25px;
   left: 29.3%;
-  top: 548.5vh;
+  top: 108.5vh;
 
   font-family: 'Migra Italic';
   font-style: italic;
@@ -969,7 +969,7 @@ transform: translateX(15px);
     width: 2px;
     height: 2px;
     left: 22.6%;
-    top: 549.7vh;
+    top: 109.7vh;
     background-color: #000000;
 }
 
@@ -979,7 +979,7 @@ transform: translateX(15px);
     width: 2px;
     height: 2px;
     left: 27.8%;
-    top: 549.7vh;
+    top: 109.7vh;
     background-color: #000000;
 }
 
@@ -1007,53 +1007,12 @@ transform: translateX(15px);
     z-index: 999;
 }
 
-.cursor_more03 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
+.img_02:hover{
+    cursor: none;
 }
 
-.cursor_more04 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
-}
-
-.cursor_more05 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
-}
-
-
-.cursor_more06 {
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 128px;
-    height: 128px;
-    border-radius: 64px;
-    background-color: #10F901;
-    z-index: 999;
+.img_02:hover+.cursor_more01{
+    opacity: 1;
 }
 
 
@@ -1093,33 +1052,6 @@ color: #000000;
 
 }
 
-.seemore_kss {
-    position: absolute;
-    transform: translate(20px, 39px);
-    font-family: 'Noto Sans KR';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 13px;
-    line-height: 20px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-/* identical to box height, or 133% */
-
-color: #000000;
-
-}
-
-
-.img_02:hover+.cursor_more01{
-    opacity: 1;
-}
-
-.img_02:hover{
-    cursor: none;
-}
-
 .img_04:hover+.cursor_more02{
     opacity: 1;
 }
@@ -1127,37 +1059,7 @@ color: #000000;
 .img_04:hover{
     cursor: none;
 }
-
-.img_06:hover+.cursor_more03{
-    opacity: 1;
-}
-
-.img_06:hover{
-    cursor: none;
-}
-
-.img_08:hover+.cursor_more04{
-    opacity: 1;
-}
-
-.img_08:hover{
-    cursor: none;
-}
-
-.img_10:hover+.cursor_more05{
-    opacity: 1;
-}
-
-.img_10:hover{
-    cursor: none;
-}
-
-.img_12:hover+.cursor_more06{
-    opacity: 1;
-}
-
-.img_12:hover{
-    cursor: none;
+.yhj {
 }
 
 .arrow {
@@ -1191,7 +1093,7 @@ color: #000000;
     width: 150px;
     height: 20px;
     left: 20%;
-    top: 511%;
+    top: 100%;
     text-align: right;
     font-family: 'helvetica';
     font-style: normal;
